[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/shield_silver.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/glassPanel_200.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/barHorizontal_red_mid 200.png" type="Texture" id=4]
[ext_resource path="res://assets/grey_circle.png" type="Texture" id=5]
[ext_resource path="res://UI/HUD/Ability_HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/HUD/health_bar_flash.tres" type="Animation" id=7]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Margin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1900.0
margin_bottom = 1060.0

[node name="Container" type="HBoxContainer" parent="Margin/VBoxContainer"]
margin_right = 1880.0
margin_bottom = 48.0

[node name="TextureRect" type="TextureRect" parent="Margin/VBoxContainer/Container"]
margin_right = 30.0
margin_bottom = 48.0
texture = ExtResource( 2 )

[node name="HealthBar" type="TextureProgress" parent="Margin/VBoxContainer/Container"]
margin_left = 34.0
margin_right = 234.0
margin_bottom = 48.0
value = 100.0
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[node name="Tween" type="Tween" parent="Margin/VBoxContainer/Container/HealthBar"]

[node name="VSeparator" type="VSeparator" parent="Margin/VBoxContainer/Container"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 238.0
margin_right = 268.0
margin_bottom = 48.0
rect_min_size = Vector2( 30, 0 )

[node name="AmmoGauge" type="TextureProgress" parent="Margin/VBoxContainer/Container"]
margin_left = 272.0
margin_right = 320.0
margin_bottom = 48.0
texture_progress = ExtResource( 5 )
fill_mode = 4
radial_initial_angle = 270.0
radial_fill_degrees = 180.0

[node name="Ability" parent="Margin/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 52.0
margin_right = 1880.0
margin_bottom = 52.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/health_bar_flash = ExtResource( 7 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
